feat: Improve service worker caching and update strategy
Refactor service worker to use a more robust caching strategy and ensure timely updates. The `index.html` registration now waits for the 'load' event and the service worker `install` and `activate` events are updated to better manage cache versions and client claiming. The `fetch` event in the service worker is updated to prioritize network requests for navigation and fall back to the cache, ensuring users always get the latest HTML.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -56,17 +55,19 @@
   <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-500">
     <div id="root"></div>
     <script>
-      let refreshing = false;
-
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js').then(reg => {
-          setInterval(() => { reg.update(); }, 1000 * 60 * 5);
-        }).catch(err => console.log('Erro SW:', err));
-
-        navigator.serviceWorker.addEventListener('controllerchange', () => {
-          if (refreshing) return;
-          refreshing = true;
-          window.location.reload();
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(registration => {
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
+              // Inicia uma verificação por atualizações a cada 5 minutos
+              setInterval(() => {
+                registration.update();
+              }, 1000 * 60 * 5); 
+            })
+            .catch(err => {
+              console.log('ServiceWorker registration failed: ', err);
+            });
         });
       }
     </script>
