--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 </head>
   <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-500">
     <div id="root"></div>
+
+    <!-- SCRIPT PARA CARREGAR O APLICATIVO REACT -->
+    <script type="module" src="/index.tsx"></script>
+
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
