--- a/index.html
+++ b/index.html
@@ -17,61 +17,74 @@
         darkMode: 'class',
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-            },
+            fontFamily: { sans: ['Inter', 'sans-serif'] }
           }
         }
       }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body { 
-        font-family: 'Inter', sans-serif;
-        overscroll-behavior-y: contain;
-      }
-      main {
-        padding-top: env(safe-area-inset-top);
-        padding-bottom: env(safe-area-inset-bottom);
-      }
-      /* Prevenção de flash branco em modo escuro */
-      html.dark {
-        background-color: #020617;
+      body { font-family: 'Inter', sans-serif; overscroll-behavior-y: contain; }
+      html.dark { background-color: #020617; }
+      #error-console { 
+        display: none; position: fixed; bottom: 0; left: 0; right: 0; 
+        background: rgba(220, 38, 38, 0.9); color: white; padding: 10px; 
+        font-family: monospace; font-size: 12px; z-index: 9999; max-height: 30vh; overflow-y: auto;
       }
     </style>
-  <script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
-    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
+    "recharts": "https://esm.sh/recharts@3.6.0?external=react",
+    "@google/genai": "https://esm.sh/@google/genai@1.37.0",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
-</head>
-  <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-500">
+  </head>
+  <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100">
     <div id="root"></div>
+    <div id="error-console"></div>
 
-    <!-- SCRIPT CORRIGIDO: Removida a barra inicial para evitar erros de rota -->
+    <script>
+      // Sistema de debug para celular
+      window.onerror = function(msg, url, line, col, error) {
+        const consoleEl = document.getElementById('error-console');
+        consoleEl.style.display = 'block';
+        consoleEl.innerHTML += `<div>ERROR: ${msg} (at ${line}:${col})</div>`;
+        return false;
+      };
+      window.onunhandledrejection = function(event) {
+        const consoleEl = document.getElementById('error-console');
+        consoleEl.style.display = 'block';
+        consoleEl.innerHTML += `<div>PROMISE ERROR: ${event.reason}</div>`;
+      };
+    </script>
+
     <script type="module" src="index.tsx"></script>
 
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('sw.js')
-            .then(registration => {
-              console.log('ServiceWorker registrado com sucesso');
-              setInterval(() => {
-                registration.update();
-              }, 1000 * 60 * 5); 
-            })
-            .catch(err => {
-              console.log('Falha ao registrar ServiceWorker: ', err);
-            });
+          navigator.serviceWorker.register('sw.js').then(reg => {
+            console.log('SW registrado');
+            reg.onupdatefound = () => {
+              const installingWorker = reg.installing;
+              installingWorker.onstatechange = () => {
+                if (installingWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                  if (confirm('Nova versão disponível! Recarregar?')) {
+                    window.location.reload();
+                  }
+                }
+              };
+            };
+          });
         });
       }
     </script>
