feat: Implement PWA loading screen and update dependencies
Adds a loading screen for the PWA that fades out after a short delay.
Updates dependencies for `lucide-react` and `recharts`.
Removes unused icons and PWA meta tags from `index.html`.
Adjusts import paths and types for React 19 compatibility in `index.tsx`.
Introduces `cpf` field to `Customer` type and `constants`.
Removes `reports` view from `View` type.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -6,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Mercado Coruja POS</title>
     
-    <!-- PWA Primary Meta Tags -->
     <meta name="theme-color" content="#4f46e5" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -31,42 +29,46 @@
         font-family: 'Inter', sans-serif;
         overscroll-behavior-y: contain;
       }
-      main {
-        padding-top: env(safe-area-inset-top);
-        padding-bottom: env(safe-area-inset-bottom);
+      #loading-screen {
+        position: fixed; inset: 0; background: #4f46e5; display: flex;
+        flex-direction: column; align-items: center; justify-content: center;
+        color: white; z-index: 8888;
       }
-      /* Prevenção de flash branco em modo escuro */
-      html.dark {
-        background-color: #020617;
+      .spinner {
+        width: 40px; height: 40px; border: 4px solid rgba(255,255,255,0.3);
+        border-top-color: white; border-radius: 50%; animation: spin 1s linear infinite;
       }
+      @keyframes spin { to { transform: rotate(360deg); } }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
+    "recharts": "https://esm.sh/recharts@3.6.0?external=react",
+    "@google/genai": "https://esm.sh/@google/genai@1.37.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-500">
+    <div id="loading-screen">
+      <div class="spinner"></div>
+      <p style="margin-top: 20px; font-weight: bold;">SISTEMA CORUJA POS</p>
+    </div>
     <div id="root"></div>
+
+    <!-- Carregador declarativo esm.sh/run para processar .tsx -->
+    <script type="module" src="https://esm.sh/run" data-main="./index.tsx"></script>
+
     <script>
-      let refreshing = false;
-
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js').then(reg => {
-          setInterval(() => { reg.update(); }, 1000 * 60 * 5);
-        }).catch(err => console.log('Erro SW:', err));
-
-        navigator.serviceWorker.addEventListener('controllerchange', () => {
-          if (refreshing) return;
-          refreshing = true;
-          window.location.reload();
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./sw.js').catch(err => console.log('SW Fail:', err));
         });
       }
     </script>
