--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Mercado Coruja POS</title>
+    <link rel="icon" href="https://i.ibb.co/yY1c3Tj/coruja-mercado-logo.png" type="image/png" />
     
     <!-- PWA Primary Meta Tags -->
     <meta name="theme-color" content="#4f46e5" />
